--- a/plugin-systeminfo/src/main/java/assets/templates/systeminfo-1x1.jade
+++ b/plugin-systeminfo/src/main/java/assets/templates/systeminfo-1x1.jade
@@ -1,2 +1,14 @@
-div
-	p what's up
+.svg
+    svg.graph(preserveAspectRatio="none", version="1.1", xmlns:xlink="http://www.w3.org/1999/xlink", xmlns="http://www.w3.org/2000/svg", viewBox="0 0 100 100")
+        g.surfaces
+            path.cpu-svg(d="")
+            path.ram-svg(d="")
+.legend
+    p 
+        | CPU:
+        span.cpu-txt 0
+        | %
+    p 
+        | RAM:
+        span.ram-txt 0
+        | %
