--- a/web/src/main/resources/templates/index.jade
+++ b/web/src/main/resources/templates/index.jade
@@ -9,13 +9,12 @@ block content
     h1#page-title page!
     #layout
     
-    span.glyphicon.glyphicon-cog
+    span#settings-button.glyphicon.glyphicon-cog
     .global-settings
         ul
-            li HomeDash
             li 
                 a(href="/settings")
-                    span.glyphicon.glyphicon-cog
+                    span.glyphicon.glyphicon-wrench
                     | Settings
             li#edit-layout
                 a
