--- a/web/src/main/java/assets/less/index.less
+++ b/web/src/main/java/assets/less/index.less
@@ -115,3 +115,81 @@
         }
     }
 }//gridster
+
+///settings
+#settings-button{
+    display: block;
+    cursor: pointer;
+    position: fixed;
+    bottom:5px;
+    right:5px;
+    top:inherit;
+    margin-bottom:12px;
+    color:@accentColor;
+    font-size:16px;
+}
+
+.global-settings{
+    position: fixed;
+    bottom:-20px;
+    right:5px;
+    margin-right:25px;
+    opacity:0;
+    font-size:16px;
+
+    @scale-size: 0.5;
+    -ms-transform: scale(@scale-size); /* IE 9 */
+    -webkit-transform: scale(@scale-size); /* Safari */
+    transform: scale(@scale-size);
+
+    -webkit-transition: all @transition-speed !important;
+    transition: all @transition-speed !important;
+
+    ul{
+        list-style: none;
+
+        li{
+            display:inline-block;
+            margin:0 5px;
+            a{
+                cursor:pointer;
+                color:black;
+            }
+            .glyphicon{
+                color:@accentColor;
+            }
+        }
+    }
+
+    #edit-layout.editing{
+        @speed: 1.2s;
+        animation: editing @speed infinite ease-in-out;
+        -webkit-animation-direction: alternate; /* Chrome, Safari, Opera */
+        animation-direction: alternate;
+    }
+
+
+    @keyframes editing {
+        @scale: 0.9;
+        from {
+            opacity:0.7;
+        }
+        to {
+            opacity:1;
+            -ms-transform: scale(@scale); /* IE 9 */
+            -webkit-transform: scale(@scale); /* Safari */
+            transform: scale(@scale);
+        }
+    }
+}
+
+.global-settings.showing{
+    bottom:5px;
+    right:5px;
+    opacity:1;
+
+    @scale-size: 1;
+    -ms-transform: scale(@scale-size); /* IE 9 */
+    -webkit-transform: scale(@scale-size); /* Safari */
+    transform: scale(@scale-size);
+}
