--- a/web/src/main/java/assets/less/main.less
+++ b/web/src/main/java/assets/less/main.less
@@ -1,5 +1,14 @@
 @import 'variables.less';
 
-body{
- background-color: @background;
+body {
+  background-color: @background;
+}
+
+.modal .modal-content {
+  box-shadow: none;
+}
+
+.container{
+  margin:0;
+  padding:0;
 }
