--- a/web/src/main/java/assets/less/variables.less
+++ b/web/src/main/java/assets/less/variables.less
@@ -1,3 +1,5 @@
 @background: white;
-@accentColor:#FF0000;
+@accentColor:rgb(50,50,50);
 @module-icon-size:30px;
+@transition-speed:0.3s;
+@border-radius: 4px;
