--- a/web/src/main/java/assets/less/main.less
+++ b/web/src/main/java/assets/less/main.less
@@ -2,13 +2,20 @@
 
 body {
   background-color: @background;
+  color:#222;
 }
 
 .modal .modal-content {
   box-shadow: none;
+  border-radius:0;
 }
 
-.container{
-  margin:0;
-  padding:0;
+a{
+  color:@accentColor;
+}
+
+
+.btn-primary{
+  background-color: @accentColor;
+  border-color: @accentColor;
 }
