--- a/web/src/main/java/assets/less/variables.less
+++ b/web/src/main/java/assets/less/variables.less
@@ -1,5 +1,5 @@
-@background: white;
-@accentColor:rgb(50,50,50);
+@background: #FFF;
+@accentColor:#e67e22;
 @module-icon-size:30px;
 @transition-speed:0.3s;
 @border-radius: 4px;
