--- a/web/src/main/resources/templates/add-module.jade
+++ b/web/src/main/resources/templates/add-module.jade
@@ -1,6 +1,6 @@
 extends ./layout.jade
 block css
-    link(href='/css/index.css', rel='stylesheet')
+
 block content
     h1 Select module to add
     .row
@@ -9,6 +9,6 @@ block content
             h2 #{plugin.getDisplayName()}
             p #{plugin.getDescription()}
             .add-button
-                a(href="/add-module/#{plugin.getClass().getCanonicalName()}", class="btn btn-default") Add #{plugin.getDisplayName()}
+                a(href="/add-module/#{plugin.getClass().getCanonicalName()}", class="btn btn-primary") Add #{plugin.getDisplayName()}
 block scripts
     
