--- a/web/src/main/resources/templates/settings.jade
+++ b/web/src/main/resources/templates/settings.jade
@@ -83,5 +83,9 @@ block content
                 button(type="submit", class="btn btn-primary") Save 
                             
 block scripts
-    script(src="/js/settings.js")                
+    script(src="/js/settings.js")
+
+block css
+    link(href='/css/settings.css', rel='stylesheet')
+
                 
