--- a/web/src/main/resources/web/css/main.css
+++ b/web/src/main/resources/web/css/main.css
@@ -1,1 +1,1 @@
-body{background-color:#fff}.modal .modal-content{box-shadow:none}.container{margin:0;padding:0}
+body{background-color:#fff;color:#222}.modal .modal-content{box-shadow:none;border-radius:0}a{color:#e67e22}.btn-primary{background-color:#e67e22;border-color:#e67e22}
