--- a/web/src/main/resources/templates/module-layout.jade
+++ b/web/src/main/resources/templates/module-layout.jade
@@ -3,27 +3,27 @@
         .gridster-item(data-row="#{layout.getY()}", data-col="#{layout.getX()}", data-sizex="#{layout.getWidth()}", data-sizey="#{layout.getHeight()}",  data-module="#{layout.getModule().getId()}")
             div(class="module #{layout.getSize()}", data-module="#{layout.getModule().getId()}", data-size="#{layout.getSize()}")
                 .module-settings
-                    .module-settings-icon(data-toggle="dropdown")
+                    .module-settings-icon(data-id="#{layout.getModule().getId()}")
                         span(class="glyphicon glyphicon-option-horizontal")
-                    ul.dropdown-menu.multi-level(role="menu")
-                        li
-                            a(href="/module/#{layout.getModule().getId()}/settings")
-                                span(class="glyphicon glyphicon-pencil")
-                                | Edit settings
-                        li.move(data-id="#{layout.getModule().getId()}")
-                            a
-                                span(class="glyphicon glyphicon-pause")
-                                | Move to page
-                        li.divider
-                        li.module-sizes
-                            a
-                                span(class="glyphicon glyphicon-resize-full")
-                                | Resize:
-                        li.divider
-                        li.delete(data-id="#{layout.getModule().getId()}")
-                            a
-                                span(class="glyphicon glyphicon-remove")
-                                | Delete
+                    //ul.dropdown-menu.multi-level(role="menu")
+                    //    li
+                    //        a(href="/module/#{layout.getModule().getId()}/settings")
+                    //            span(class="glyphicon glyphicon-pencil")
+                    //            | Edit settings
+                    //    li.move(data-id="#{layout.getModule().getId()}")
+                    //        a
+                    //            span(class="glyphicon glyphicon-pause")
+                    //            | Move to page
+                    //    li.divider
+                    //    li.module-sizes
+                    //        a
+                    //            span(class="glyphicon glyphicon-resize-full")
+                    //            | Resize:
+                    //    li.divider
+                    //    li.delete(data-id="#{layout.getModule().getId()}")
+                    //        a
+                    //            span(class="glyphicon glyphicon-remove")
+                    //            | Delete
                 .settings-overlay
                 .loading
                     .loader
