--- a/web/src/main/resources/templates/index.jade
+++ b/web/src/main/resources/templates/index.jade
@@ -14,6 +14,11 @@ block content
             .loader
         #layout
 
+    #notification.success
+        .icon
+        .message
+            | Test notification
+
     span#settings-button.glyphicon.glyphicon-cog
     .global-settings
         ul
