--- a/web/src/main/resources/templates/layout.jade
+++ b/web/src/main/resources/templates/layout.jade
@@ -6,6 +6,7 @@ html(lang="en")
     meta(content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0", name="viewport")
     
     title HomeDash
+    link(href="http://fonts.googleapis.com/css?family=Roboto:300,300italic", rel="stylesheet", type="text/css")
     link(href='/css/vendor/bootstrap/css/bootstrap.min.css', rel='stylesheet')
     link(href='/css/main.css', rel='stylesheet')
     
